--- a/server-side/microservice-authentication/pom.xml
+++ b/server-side/microservice-authentication/pom.xml
@@ -22,6 +22,7 @@
         <org.hibernate-version>5.4.2.Final</org.hibernate-version>
         <org.projectlombok-version>1.18.6</org.projectlombok-version>
         <spring-kafka.version>2.2.5.RELEASE</spring-kafka.version>
+        <io.jsonwebtoken>0.9.1</io.jsonwebtoken>
     </properties>
 
     <parent>
@@ -63,6 +64,12 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>${spring-kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${io.jsonwebtoken}</version>
         </dependency>
 
     </dependencies>
