--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 client-side/.idea/
 server-side/.idea/
-
-если опшинал из презент то уже этот маппинг выполнять
+server-side/microservice-authentication/.idea/
